# gpt-add

./: .gitignore  README.md  main.py  pyproject.toml
gpt_add/: arithmetic.py  bigram.py  data.py  encode.py  model.py  operation.py  tokenizer.py  train.py
gpt_add/models/: bigram.py  gpt.py
notebooks/: Bigram.ipynb  LossGraphs.ipynb
tests/: test_train.py
